refactor: 添加控制器和视图对象的注释，增强代码可读性
- 在 IngestionPipelineController、IngestionTaskController、KnowledgeBaseController、KnowledgeChunkController、KnowledgeDocumentController 及其视图对象中添加类注释，提升代码的可维护性和可理解性。
- 更新 KnowledgeDocumentVO 中的字段，移除不必要的属性，简化数据结构。
- 在 KnowledgeBaseServiceImpl 和 KnowledgeChunkServiceImpl 中引入 BeanUtil，优化对象转换逻辑，提升代码一致性。